SFCompLibrary/src/objects/AvaCredentials__c.object
<CustomObject>
    <description>Custom Object to Store Avalara Credentials</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Avalara Account Number for Webservice calls to the Avalara WebService</description>
        <inlineHelpText>Avalara Account Number</inlineHelpText>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>One and only one Credentials record should be the Active Credentials</inlineHelpText>
        <label>Active Credentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Company</label>
        <referenceTo>AvaCompany__c</referenceTo>
        <relationshipLabel>AvaCredentials</relationshipLabel>
        <relationshipName>AvaCredentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Key__c</fullName>
        <description>Avalara License Key for WebService Calls to Avalara Service (Account Number + LicenseKey are analagous to a Username + password)</description>
        <inlineHelpText>Avalara License Key for WebService Calls to Avalara</inlineHelpText>
        <label>License Key</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Service_URL__c</fullName>
        <defaultValue>&apos;https://avatax.avalara.net&apos;</defaultValue>
        <description>Url for Web Service Calls to the Avalara Tax Service</description>
        <inlineHelpText>Url for Web Service Calls to the Avalara Tax Service</inlineHelpText>
        <label>Service URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AvaCredentials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaCredentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaCredentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>